--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
-/.pnp
+.pnp
 .pnp.js
 
 # testing
@@ -17,7 +15,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.eslintcache
+.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+back.log*
